CI updates
* Exports more packages.
* Update GitHub action.
* Address GH bot comments.